<?xml version="1.0"?>
<package format="2">
  <name>ros_herkulex</name>
  <version>0.1.0</version>
  <description>ROS driver for a chain of Herkulex robot servos</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>GPLv3</license>
  <url type="website">http://wiki.ros.org/ros_herkulex</url>
  <author email="Pete.Blacker@Gmail.com">Pete Blacker</author>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>flat_bot_msgs</build_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>flat_bot_msgs</exec_depend>
  
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
